--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 
+#wrap{overflow-x: hidden;}
+
 /* section01 */
 #section01{position: relative;}
 #section01 .mainSlide{ height: 1080px;}
@@ -60,5 +62,52 @@
     #section01 .mainSlide.mainSlide03 .contactWrap .callBox .call::before{width: 20px; height: 20px; background-size: cover;}
     #section01 .mainSlide.mainSlide03 .contactWrap .number{font-size: 35px;}
     #section01 .mainSlide.mainSlide03 .contactWrap p{font-size: 16px;}
+
+}
+
+/* section02 */
+#section02{padding: 120px 0 218px; background: url(../images/main/bg02.jpg)no-repeat center top; background-size: cover;}
+.titleWrap{margin-bottom: 44px;}
+.titleWrap h1 span{display: block; margin-bottom: 25px; color: #fff; font-weight: 500; text-align: center; font-size: 70px; text-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);}
+.titleWrap h1 strong{position: relative; display: block; text-align: center; font-size: 70px; color: #ff661a;  font-family: VITROCORETTF; text-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);}
+.titleWrap h1 strong em{position: relative;}
+.titleWrap h1 strong em::after{content: ''; position: absolute; top:-10px; left: 50%; margin-left: -6.5px;  width: 13px; height: 13px; border-radius: 50px; background-color: #ff661a; } 
+#section02 .text01{margin-bottom: 50px; display: flex; align-items: center; justify-content: center; gap: 30px;}
+#section02 .text01{font-size: 70px; font-weight: 700; color: #ff661a; line-height: 1.3;}
+#section02 .text01 strong{width: 500px; height: 180px; display: flex; align-items: center; justify-content: center; font-size: 120px; font-weight: 700; color: #000; box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.5); background-color: #ff661a; border-radius: 90px; letter-spacing: -7px;}
+#section02 .text02{font-size: 30px; font-weight: 600; text-align: center; font-family: 'Pretendard'; color: #fff; line-height: 1.25;}
+#section02 .text02 strong{font-size: 35px; color: #ff661a; font-weight: 800;}
+#section02 .top{margin-bottom: 170px; position: relative; padding-bottom: 93px;}
+#section02 .top::after{content: ''; position: absolute; bottom: 0; left: -100%; right: -100%; height: 20px;  box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.5); background-color: #ff661a;}
+#section02 .infoList{display: flex; justify-content: center; gap: 58px;}
+#section02 .infoList span::after{content: ''; position: absolute; top:-80px; left: 50%; margin-left: -2.5px;  width: 5px; height: 50px; background-color: #ff661a}
+#section02 .infoList span{ position: relative; display: block; width: 80px; height: 80px; margin: 0 auto 30px; text-align: center; line-height: 84px;   box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.5); background-color: #ff661a; font-size: 35px; font-weight: 700; border-radius: 50px; color: #000;}
+#section02 .infoList h2{margin-bottom: 10px; text-align: center; font-size: 60px; font-weight: 700; color: #ff661a;}
+#section02 .infoList p{text-align: center; font-family: Pretendard; font-size: 20px; color: #fff; line-height: 1.25;}
+
+@media (max-width: 1024px){
+    
+    #section02{padding: 80px 0 114px;}
+    #section02 .text01{gap: 10px; margin-bottom: 41px; font-size: 40px;}
+    #section02 .text01 strong{width: 220px; height: 90px; font-size: 55px; letter-spacing: -3px;}
+    #section02 .text02{font-size: 18px;}
+    #section02 .text02 strong{font-size: 20px;}
+    #section02 .top{margin-bottom: 110px; padding-bottom: 61px;}
+    #section02 .infoList span{margin-bottom: 30px; width: 60px; height: 60px; line-height: 62px; font-size: 30px;}
+    #section02 .infoList h2{margin-bottom: 11px; font-size: 50px;}
+    #section02 .infoList p{font-size: 18px;}
+    #section02 .slickWrap{position: relative;}
+    #section02 .slickWrap button{position: absolute; top:90px; width: 40px; height: 40px;}
+    #section02 .slickWrap button.prev{left:0; background: url(../images/main/prev.png)no-repeat;}
+    #section02 .slickWrap button.next{right:0; background: url(../images/main/next.png)no-repeat;}
+
+    .titleWrap{margin-bottom: 23px;}
+    .titleWrap h1 span{margin-bottom: 15px;}
+    .titleWrap h1 span{font-size: 35px;}
+    .titleWrap h1 strong{font-size: 50px;}
+    .titleWrap h1 strong em::after{top: -5px; width: 8px; height: 8px;}
+    
+    
+    
 
 }
