--- a/css/main.css
+++ b/css/main.css
@@ -106,8 +106,45 @@
     .titleWrap h1 span{font-size: 35px;}
     .titleWrap h1 strong{font-size: 50px;}
     .titleWrap h1 strong em::after{top: -5px; width: 8px; height: 8px;}
-    
-    
-    
+
+}
+
+/* section03 */
+#section03{padding: 140px 0 83px; background: url(../images/main/bg03.jpg)no-repeat center top; }
+#section03 .titleWrap{margin-bottom: 17px;} 
+#section03 .titleWrap h1{display: flex; gap: 8px; justify-content: center;}
+#section03 .titleWrap h1 span em{font-size: 70px;}
+#section03 .titleWrap h1 span,
+#section03 .titleWrap h1 strong{text-shadow: none;}
+#section03 .titleWrap h1 strong{margin-top: -5px; font-size: 80px;}
+#section03  .text01{margin-bottom: 110px; font-size: 25px; font-weight: 600; color: #fff; text-align: center; font-family: 'Pretendard'; line-height: 1.2;}
+#section03  .text01 strong{font-weight: 600; color: #ff661a; font-family: 'Pretendard';} 
+#section03 h2{position: relative; margin: 0 auto; width: 320px; height: 80px; line-height: 80px; border-radius: 40px; background-color: #ff661a; text-align: center; font-size: 45px; color: #000; font-weight: 700; z-index: 2;}
+#section03 h2::after{content: ''; position: absolute; left: 50%; margin-left: -2.5px; top:-80px; width: 5px; height: 50px; background-color: #ff661a;}
+#section03 .top{position: relative; margin-bottom: 42px;}
+#section03 .top::after{content: ''; position: absolute; bottom: 37px; left: -100%; right: -100%; height: 10px; background-color: #ff661a; box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.5);}
+#section03 .infoList li{padding: 20px 0; display: flex; align-items: center; gap: 20px; border-bottom: 1px solid rgba(255,255,255, .2);}
+#section03 .infoList li:last-child{border: 0;}
+#section03 .infoList li span{display: block; width: 60px; height: 60px; line-height: 60px; border-radius: 50px; text-align: center; box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.5); background-color: #ff661a; font-size: 25px; font-weight: 700; color: #000;}
+#section03 .infoList li p{font-size: 35px; font-weight: 300; color: #fff;}
+#section03 .infoList li p strong{font-weight: 700; color: #ff661a;}
+#section03 .info{margin-top: 40px; padding: 31.5px 20px; background-color: #ff661a; box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2); font-size: 18px; font-weight: 800; font-family: Pretendard; line-height: 1.25;}
+
+@media (max-width: 1024px){
+
+    #section03{padding: 80px 0 100px;}
+    #section03 .titleWrap{margin-bottom: 101px;}
+    #section03 .text01{display: none;}
+    #section03 .titleWrap h1{flex-direction: column;}
+    #section03 .titleWrap h1 span em{font-size: 40px;}
+    #section03 .titleWrap h1 span,
+    #section03 .titleWrap h1 strong{font-size: 50px;}
+    #section03 .top::after{bottom: 22px;}
+    #section03 h2::after{top: -70px; height: 40px;}
+    #section03 h2{width: 200px; height: 50px; line-height: 50px; font-size: 30px;}
+    #section03 .infoList li{gap: 10px;}
+    #section03 .infoList li span{width: 40px; height: 40px; line-height: 42px; font-size: 16px;}
+    #section03 .infoList li p{font-size: 22px;}
+    #section03 .info{padding: 27.5px 20px;}
 
 }
