--- a/css/main.css
+++ b/css/main.css
@@ -110,7 +110,7 @@
 }
 
 /* section03 */
-#section03{padding: 140px 0 83px; background: url(../images/main/bg03.jpg)no-repeat center top; }
+#section03{padding: 140px 0 83px; background: url(../images/main/bg03.jpg)no-repeat center top; background-size: cover;}
 #section03 .titleWrap{margin-bottom: 17px;} 
 #section03 .titleWrap h1{display: flex; gap: 8px; justify-content: center;}
 #section03 .titleWrap h1 span em{font-size: 70px;}
@@ -146,5 +146,26 @@
     #section03 .infoList li span{width: 40px; height: 40px; line-height: 42px; font-size: 16px;}
     #section03 .infoList li p{font-size: 22px;}
     #section03 .info{padding: 27.5px 20px;}
+
+}
+
+/* section04 */
+#section04{padding: 140px 0 240px; background: url(../images/main/bg04.jpg)no-repeat center top; }
+#section04 .titleWrap{margin-bottom: 14px;}
+#section04 .titleWrap strong{display: inline-block; margin-top: 24px;}
+#section04 .text01{margin-bottom: 150px; text-align: center; color: #fff; font-size: 25px; font-weight: 600; font-family: Pretendard; line-height: 1.4;}
+#section04 .list::after{content: ''; position: absolute; top:-110px; left:50%; margin-left: -2.5px; width: 5px; height: 50px; background-color: #ff661a;}
+#section04 .list{position: relative; display: flex; flex-wrap: wrap; gap: 20px; justify-content: center;}
+#section04 .list li{width: 285px; height: 140px; line-height: 142px; text-align: center; font-size: 30px; font-weight: 500; color: #000; background-color: #ff661a;}
+
+@media (max-width: 1024px){
+
+    #section04{padding: 80px 0 100px;}
+    #section04 .titleWrap{margin-bottom: 13px;}
+    #section04 .titleWrap h1 strong{display: block; margin: 20px 0 10px;}
+    #section04 .titleWrap h1 span > em{font-size: 40px;} 
+    #section04 .text01{margin-bottom: 104px; font-size: 18px;}
+    #section04 .list li{width: 200px; height: 120px; line-height: 120px; font-size: 30px;}
+    #section04 .list::after{top: -70px;}
 
 }
