--- a/css/main.css
+++ b/css/main.css
@@ -277,3 +277,83 @@
     #section07 .videoList li{width: 47.8%; padding-top: 31%;}
 
 }
+
+/* section08 */
+#section08{padding: 60px 0; background: url(../images/main/bg07.jpg)no-repeat center top; background-size: cover;}
+#section08 .titleWrap{margin-bottom: 17px;}
+#section08 .titleWrap .title h1 span{font-weight: 700; text-align: left; text-shadow: none;}
+#section08 .titleWrap .title h1 strong{display: inline-block; text-shadow: none;}
+#section08 .areaWrap{display: flex;}
+#section08 .areaLeft{padding-top: 160px; text-align: left;}
+#section08 .areaLeft .areaList{display: flex; gap: 10px; flex-wrap: wrap;}
+#section08 .areaLeft .areaList li{ width: 140px; height: 60px; line-height: 60px; border-radius: 30px; border: solid 2px #ff661a; font-size: 20px; font-weight: 300; color: #ff661a; text-align: center;}
+#section08 .areaLeft .text01{margin-bottom: 60px; font-size: 25px; font-weight: 600; font-family: 'Pretendard'; color: #fff;}
+#section08 .areaRight img{display: block;}
+
+@media (max-width: 1024px){
+
+    #section08{padding: 90px 0 100px;}
+    #section08 .titleWrap{margin-bottom: 0;}
+    #section08 .areaLeft .text01{margin-bottom: 30px; font-size: 18px; line-height: 1.3;}
+    #section08 .areaRight img{display: block; width: 500px;}
+    #section08 .areaLeft .areaList li{width: 86px; height: 50px; line-height: 50px; font-size: 18px;}
+    #section08 .titleWrap h1 strong,
+    #section08 .titleWrap h1 span{font-size: 40px;}
+    #section08 .titleWrap h1 span{margin-bottom: 12px;}
+    
+}
+
+@media (max-width: 860px){
+
+    #section08 .titleWrap .title h1 span{text-align: center;}
+    #section08 .areaLeft{padding-top: 0;}
+    #section08 .areaLeft .text01{text-align: center;}
+    #section08 .areaWrap{flex-direction: column; gap: 50px;}
+    #section08 .areaRight img{display: block; margin: 0 auto;}
+
+}
+
+@media (max-width: 576px){
+
+    #section08 .areaLeft .areaList{display: none;}
+    #section08 .areaLeft .text01{margin-bottom:35px;}
+    #section08 .areaRight .map{position: relative;}
+    #section08 .areaRight .map::after{content: ''; position: absolute; top:-50px; left:50%; width: 5px; height: 40px; margin-left: -2.5px; background-color: #ff661a;}
+    #section08 .areaRight img{width: 380px;}
+
+}
+
+/* section09 */
+#section09{padding:160px 0 0; height: 540px; background: url(../images/main/bg08.jpg)no-repeat center top; background-size: cover;}
+#section09 h1{position: relative;margin-bottom: 24px; color: #000; font-size: 80px; font-family: 'VITROCORETTF'; text-align: center;}
+#section09 h1::after{content: ''; position: absolute; top:-70px; left:50%; margin-left: -30px; width: 60px; height: 60px; background: url(../images/main/tel.png)no-repeat; background-size: cover;} 
+#section09 .contactWrap span{display: block; width: 200px; height: 40px; line-height: 42px; margin: 0 auto 10px; text-align: center; border-radius: 20px; color: #000; background-color: #000; color: #ff661a; font-size: 25px; font-weight: 500;}  
+#section09 .contactWrap .number{display: block; margin-bottom: 10px; font-size: 60px; font-weight: 700; text-align: center; text-align: center; color: #000;}
+#section09 .contactWrap p{text-align: center; color: #000; font-size: 20px; font-weight: 700; font-family: 'Pretendard';}
+
+@media (max-width: 1024px){
+
+    #section09{padding: 104px 0 0; height: 360px;}
+    #section09 h1{margin-bottom: 21px; font-size: 50px;}
+    #section09 .contactWrap span{width: 160px; font-size: 18px;}
+    #section09 .contactWrap .number{font-size: 40px;}
+    #section09 .contactWrap p{font-size: 18px;}
+    #section09 h1::after{top: -50px; width: 40px; height: 40px;}
+
+}
+#footer{ height: 280px; background-color: #262626;}
+#footer address{padding-top: 80px; height: 210px; font-size: 18px; font-weight: 300; font-family: 'Pretendard'; color: #fff; line-height: 1.5;}
+#footer address br:nth-of-type(1){display: none;}
+#footer p{position: relative; height: 69px; display: flex; align-items: center; text-align: center; font-size: 18px; font-weight: 300; font-family: 'Pretendard'; color: #fff;}
+#footer p::after{content: ''; position: absolute; top:0; left:-100%; right: -100%; height: 1px; background-color: #333;}
+
+@media (max-width:1024px){
+
+    #footer{height:auto;}
+    #footer address br:nth-of-type(1){display: block;}
+    #footer address,
+    #footer p{font-size: 14px;}
+    #footer address{height: auto; padding: 60px 0;}
+    #footer p{height: auto; padding: 27px 0;}
+
+}
